2008-12-16  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: fix the comparison of the definition
	of System.Delegate and System.MulticastDelegate.

2008-12-05  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs
	* CompareContext.cs
	* Comparison.cs
	* Main.cs
	* MasterMetadata.cs
	* Masterinfo.cs
	* Metadata.cs:
		add license and copyright information.

2008-12-05  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs
	* CompareContext.cs
	* Comparison.cs
	* MasterMetadata.cs
	* Metadata.cs:
		cleanup usings.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* CompareContext.cs
	* MainWindow.cs: move the Gtk dependant code from the CompareContext
	to the MainWindow, so that CompareContext can be used in a non Gtk
	application.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs: update.

2008-12-02  Chris Toshok  <toshok@ximian.com>

	* CecilMetadata.cs: fix TODO attribute handling.  they aren't
	public, so we need to handle them before we check for
	public/private.

2008-11-21  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: improve pretty printing of Cecil types.
	* InfoManager.cs: update masterinfos uri to point to the new files.
	* MasterMetadata.cs, Masterinfo.cs: adjust to the mono-api-info format
	changes, which add a generic-parameters group to every generic method
	or type, and which can have a generic-parameter-constraints subgroup.

2008-08-15  Chris Toshok  <toshok@ximian.com>

	* MasterMetadata.cs (MasterUtils.ShouldSkipAttribute): we can't
	just use a string comparison here for CodeAnalysis attributes -
	they contains lots of info in the name string, we only cafe if it
	starts with
	"System.Diagnostics.CodeAnalysis.SuppressMessageAttribute".

2008-08-13  Chris Toshok  <toshok@ximian.com>

	* CecilMetadata.cs: go back to ignoring all private methods.  if
	there are missing methods due to this, we need to fix the .xml
	generation.

2008-08-11  Sebastien Pouliot  <sebastien@ximian.com>
